// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/kingdom/repetition_spec.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// TODO(world-federation-of-advertisers/cross-media-measurement#52): Delete once
// Measurement is being used instead of Report.
message ReportConfigSchedule {
  fixed64 external_advertiser_id = 1;
  fixed64 external_report_config_id = 2;
  fixed64 external_schedule_id = 3;

  google.protobuf.Timestamp next_report_start_time = 4;

  RepetitionSpec repetition_spec = 5;
  string repetition_spec_json = 6;
}
